AppService-FrontDoor-PrivateEndpoints/k8s/selector-toleration/istio-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: dotnet-pe-tester-internal
  namespace: default
spec:
  parentRefs:
    - name: gateway-internal
      namespace: aks-istio-ingress
  hostnames: ['dotnet-pe.aks.rocks']
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: dotnet-pe-tester
          port: 8080
# ---
# For Istio External Gateway
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: dotnet-pe-tester
#   namespace: default
# spec:
#   parentRefs:
#   - name: gateway-external
#     namespace: aks-istio-ingress
#   hostnames: ["dotnet-pe.aks.rocks"]
#   rules:
#   - matches:
#     - path:
#         type: PathPrefix
#         value: /
#     backendRefs:
#     - name: dotnet-pe-tester
#       port: 8080
